--- a/scss/distribution-page.scss
+++ b/scss/distribution-page.scss
@@ -16,6 +16,23 @@
     background: #f4f4fd;
     &__image {
       width: calc(66% + 5px);
+      position: relative;
+      &:after {
+        content: '';
+        height: 100%;
+        position: absolute;
+        width: 100px;
+        right: 0;
+        top: 0;
+        background: rgba(255,255,255,0);
+        background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(250,250,254,0) 42%, rgba(244,244,253,0.98) 99%, rgba(244,244,253,1) 100%);
+        background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,255,255,0)), color-stop(42%, rgba(250,250,254,0)), color-stop(99%, rgba(244,244,253,0.98)), color-stop(100%, rgba(244,244,253,1)));
+        background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(250,250,254,0) 42%, rgba(244,244,253,0.98) 99%, rgba(244,244,253,1) 100%);
+        background: -o-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(250,250,254,0) 42%, rgba(244,244,253,0.98) 99%, rgba(244,244,253,1) 100%);
+        background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(250,250,254,0) 42%, rgba(244,244,253,0.98) 99%, rgba(244,244,253,1) 100%);
+        background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(250,250,254,0) 42%, rgba(244,244,253,0.98) 99%, rgba(244,244,253,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4fd', GradientType=1 );
+      }
       img {
         width: 100%;
         object-fit: cover;
@@ -31,8 +48,17 @@
       padding-bottom: 30px;
       &-buttons {
         width: 100%;
+        a {
+          &:first-child .btn{
+            width: 250px;
+          }
+          &:last-child .btn{
+            width: 200px;
+          }
+        }
         .btn {
           margin-right: 7px;
+
         }
       }
       &-title {
