--- a/scss/about-page.scss
+++ b/scss/about-page.scss
@@ -90,6 +90,12 @@ $border-size: 1px;
 
   .bottom-panel {
     margin-top: 82px;
+    @media screen and (max-width: 1024px) {
+      margin-top: 40px;
+    }
+    @media screen and (max-width: 480px) {
+      margin-top: 0;
+    }
   }
 
   .mission {
@@ -304,7 +310,7 @@ $border-size: 1px;
       flex-wrap: wrap;
       &[data-animate="true"] {
         .values__list-item {
-          animation-duration: 1.5s;
+          animation-duration: 0.8s;
           animation-name: slideinDiagonal;
         }
       }
@@ -322,12 +328,48 @@ $border-size: 1px;
         }
         @media screen and (max-width: 1024px) {
           width: calc(100% / 3);
+          &:nth-child(1) {order: 1;}
+          &:nth-child(2) {order: 2;}
+          &:nth-child(3) {order: 3;}
+          &:nth-child(4) {order: 4;}
+          &:nth-child(5) {order: 6;}
+          &:nth-child(6) {order: 5;}
+          &:nth-child(7) {order: 8;}
+          &:nth-child(8) {order: 7;}
+          &:nth-child(9) {order: 9;}
+          &:nth-child(10) {order: 10;}
+          &:nth-child(11) {order: 11;}
+          &:nth-child(12) {order: 12;}
         }
         @media screen and (max-width: 768px) {
           width: calc(100% / 2);
+          &:nth-child(1) {order: 2;}
+          &:nth-child(2) {order: 1;}
+          &:nth-child(3) {order: 3;}
+          &:nth-child(4) {order: 4;}
+          &:nth-child(5) {order: 5;}
+          &:nth-child(6) {order: 6;}
+          &:nth-child(7) {order: 8;}
+          &:nth-child(8) {order: 7;}
+          &:nth-child(9) {order: 10;}
+          &:nth-child(10) {order: 9;}
+          &:nth-child(11) {order: 11;}
+          &:nth-child(12) {order: 12;}
         }
         @media screen and (max-width: 480px) {
           width: 100%;
+          &:nth-child(1) {order: 2;}
+          &:nth-child(2) {order: 1;}
+          &:nth-child(3) {order: 4;}
+          &:nth-child(4) {order: 3;}
+          &:nth-child(5) {order: 5;}
+          &:nth-child(6) {order: 6;}
+          &:nth-child(7) {order: 7;}
+          &:nth-child(8) {order: 8;}
+          &:nth-child(9) {order: 10;}
+          &:nth-child(10) {order: 9;}
+          &:nth-child(11) {order: 12;}
+          &:nth-child(12) {order: 11;}
         }
         &:nth-child(1) {animation-delay: 0s;}
         &:nth-child(2) {animation-delay: 0.2s;}
