--- a/scss/career-page.scss
+++ b/scss/career-page.scss
@@ -146,6 +146,9 @@
           .career__list_item--image {
             img {
               width: 60px;
+              @media screen and (max-width: 768px) {
+                width: 40px;
+              }
             }
           }
         }
@@ -155,6 +158,10 @@
             img {
               width: 60px;
               margin-top: -10px;
+              @media screen and (max-width: 768px) {
+                width: 40px;
+                margin-top: -6px;
+              }
             }
           }
         }
@@ -168,8 +175,15 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          @media screen and (max-width: 768px) {
+            width: 100px;
+            height: 100px;
+          }
           img {
             width: 72px;
+            @media screen and (max-width: 768px) {
+              width: 50px;
+            }
           }
           &:after {
             content: "";
@@ -234,10 +248,10 @@
         width: 100%;
       }
       @media screen and (max-width: 768px) {
-        font-size: 26px;
+        font-size: 24px;
       }
       @media screen and (max-width: 360px) {
-        font-size: 22px;
+        font-size: 20px;
       }
     }
     .btn {
