--- a/scss/about-page.scss
+++ b/scss/about-page.scss
@@ -358,6 +358,10 @@ $border-size: 1px;
         }
         @media screen and (max-width: 480px) {
           width: 100%;
+          animation: none!important;
+          transform: translate(0, 0);
+          opacity: 1;
+          visibility: visible;
           &:nth-child(1) {order: 2;}
           &:nth-child(2) {order: 1;}
           &:nth-child(3) {order: 4;}
