--- a/scss/products-page.scss
+++ b/scss/products-page.scss
@@ -111,6 +111,7 @@
         margin-top: -20px;
         width: 100%;
         position: relative;
+        pointer-events: none;
       }
       &:nth-child(2),
       &:nth-child(4),
