--- a/scss/contacts-page.scss
+++ b/scss/contacts-page.scss
@@ -96,8 +96,14 @@
   }
 
   .text-content {
+    margin-top: -5px;
     padding-left: 28px;
-    line-height: 1.4em;
+    line-height: 1.45em;
+    color: #484848;
+    @media screen and (max-width: 480px) {
+      font-size: 14px;
+      line-height: 1.65em;
+    }
   }
 
   .title {
