--- a/scss/products-import-page.scss
+++ b/scss/products-import-page.scss
@@ -172,6 +172,7 @@
                 transition: 0.1s;
               }
               &:hover {
+                background: darken(#2c256c, 10%);
                 img {
                   transform: scale(1.08);
                 }
@@ -270,7 +271,7 @@
         max-width: 190px;
 
         .assoc_title {
-          min-height: 32px;
+          max-height: 32px;
           font-weight: 600;
           color: #545454;
           margin: auto;
@@ -280,8 +281,12 @@
             margin-bottom: 10px;
             display: flex;
             align-items: center;
+            justify-content: center;
             // justify-content: space-between;
             font-size: 14px;
+            span {
+              position: relative;
+            }
             .substance {
               font-weight: 600;
               margin-right: auto;
@@ -293,8 +298,11 @@
           }
         }
         img {
+          position: absolute;
+          left: -28px;
           width: 20px;
-          margin-right: 10px;
+          top: -2px;
+          /* margin-right: 10px; */
         }
       }
     }
