--- a/scss/products-page.scss
+++ b/scss/products-page.scss
@@ -5,7 +5,7 @@
   // justify-content: center;
   .top-panel {
     background: url(../img/contactblue.jpg);
-    padding: 46px 0 47px;
+    padding: 20px 0 20px;
   }
   .bottom-panel {
     margin-top: 82px;
@@ -115,6 +115,7 @@
         width: 100%;
         position: relative;
         pointer-events: none;
+        z-index: 1;
       }
 
       &--img {
@@ -133,10 +134,6 @@
         width: 22%;
         padding: 0 20px;
 
-        a {
-          background: url(../img/ownblue2.jpg) no-repeat;
-          background-position: center;
-        }
         @media screen and (max-width: 1024px) {
           width: calc(100%/3);
           padding: 0 20px;
@@ -148,24 +145,6 @@
           width: calc(100%/1);
         }
       }
-      // &--label-big {
-      //   width: 34%;
-      //   padding: 0 60px;
-      //   a {
-      //     background: url(../img/ownblue1.jpg) no-repeat;
-      //     background-position: center;
-      //   }
-      //   @media screen and (max-width: 1024px) {
-      //     width: calc(100%/3);
-      //     padding: 0 20px;
-      //   }
-      //   @media screen and (max-width: 768px) {
-      //     width: calc(100%/2);
-      //   }
-      //   @media screen and (max-width: 420px) {
-      //     width: calc(100%/1);
-      //   }
-      // }
 
       &--label-small, &--label-big {
         background-size: cover !important;
@@ -174,8 +153,6 @@
         align-items: center;
         // transition: 0.1s;
         position: relative;
-
-
 
         img {
           width: 80px;
@@ -192,6 +169,20 @@
           margin: 0;
           transition: 0.1s;
           background-size: cover!important;
+          z-index: 1;
+          // background: url(../img/ownblue2.jpg) no-repeat;
+          background-position: center;
+          &:after {
+            content: '';
+            background: rgba(48,44, 117, 0.75);
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            // transition: 0.1s;
+          }
+
         }
         span {
           padding: 20px 0;
@@ -209,7 +200,7 @@
           }
         }
         &:hover {
-          z-index: 1;
+          // z-index: 1;
           a {
             transform: scale(1.02);
           }
